fix negative z-index issue

--- a/src/scenes/Feed/feed.css
+++ b/src/scenes/Feed/feed.css
@@ -34,5 +34,4 @@
   position: relative;
   padding-top: 70px;
   padding-bottom: 70px;
-  z-index: -10;
 }
